--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,12 +35,10 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - run: npm install
-        
+      - run: npm install        
       - run: npm run cy:run
-        
-      - run: npm run report:merge
-        
+        continue-on-error: true        
+      - run: npm run report:merge        
       - run: npm run report:mocha
         
         
