--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,28 +23,30 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x]
-      
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Setup Node.js
-        uses: actions/setup-node@2.1.3
+        uses: actions/setup-node@v2.1.3
         with:
-          node-version: ${{ matrix.node-version }}
-      
+          node-version: ${{  matrix.node-version }}
+        
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      - run: npm install        
+        
+      - run: npm install
+      
       - run: npm run cy:run
-        continue-on-error: true        
-      - run: npm run report:merge        
+        continue-on-error: true
+        
+      - run: npm run report:merge
+      
       - run: npm run report:mocha
-        
-        
+      
+      
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-            BRANCH: gh-pages
-            FOLDER: mochawesome-report
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          BRANCH: gh-pages
+          FOLDER: mochawesome-report 
